fix printing horizontal rotation, wrap SVG in divs

--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -100,6 +100,8 @@ body.printandplay .card.Encounter {
     font-family: $font-header !important;
   }
 
+
+
   &.Encounter, &.Adventurer {
     .contents {
       width: 3.5in - 2*$border;
@@ -112,7 +114,7 @@ body.printandplay .card.Encounter {
     }
   }
 
-  svg {
+  .inline_icon {
     height: $icon-width;
     line-height: $icon-width;
     width: auto;
@@ -120,6 +122,11 @@ body.printandplay .card.Encounter {
     vertical-align: initial;
     margin: 0.01in 0 -0.01in 0;
     padding: 0 0.01in; /* prevents icon truncation */
+
+    .svg {
+      height: $icon-width;
+      width: auto;
+    }
   }
 
   &.front, &.back {
@@ -146,7 +153,7 @@ body.printandplay .card.Encounter {
       padding: $padding 0;
       background: url(../img/ability-banner.svg) no-repeat;
 
-      svg {
+      .svg {
         margin: 0;
         padding: 0 0 0 .0375in;
         width: 0.25in;
@@ -158,7 +165,7 @@ body.printandplay .card.Encounter {
       float: right;
       padding-left: $tiny;
 
-      svg {
+      .svg {
         margin: 0;
         padding-left: 0.04in;
       }
