--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -37,7 +37,9 @@ body:not(.printer) {
 
 .printer {
   .card.back {
-    transform: rotate(180deg);
+    &.Adventurer, &.Enctouner {
+      transform: rotate(180deg);
+    }
   }
 }
 
